--- a/src/app/visitor/header/header.component.html
+++ b/src/app/visitor/header/header.component.html
@@ -1,7 +1,7 @@
 <nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/lips" routerLinkActive="active">Labios</a>
-  <a routerLink="/eyes" routerLinkActive="active">Ojos</a>
-  <a routerLink="/face" routerLinkActive="active">Rostro</a>
-  <a routerLink="/login" routerLinkActive="active">Iniciar Sesion</a>
+  <a [routerLink]="['/visitor/home']" routerLinkActive="active">Home</a>
+  <a [routerLink]="['/visitor/lips']" routerLinkActive="active">Labios</a>
+  <a [routerLink]="['/visitor/eyes']" routerLinkActive="active">Ojos</a>
+  <a [routerLink]="['/visitor/face']" routerLinkActive="active">Rostro</a>
+  <a [routerLink]="['/visitor/login']" routerLinkActive="active">Iniciar Sesion</a>
 </nav>
