--- a/src/app/visitor/visitor.component.html
+++ b/src/app/visitor/visitor.component.html
@@ -1,3 +1,6 @@
 <app-header></app-header>
 <app-menu></app-menu>
-<!-- <router-outlet></router-outlet> -->
+<app-content></app-content>
+<app-footer></app-footer>
+<app-setting></app-setting>
+<router-outlet></router-outlet>
