--- a/src/app/visitor/menu/menu.component.html
+++ b/src/app/visitor/menu/menu.component.html
@@ -5,45 +5,17 @@
 
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
-          <div class="pull-left image">
-              <img src="assets/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-          </div>
-          <div class="pull-left info">
-              <p>Alexander Pierce</p>
-              <!-- Status -->
-              <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+          <div class="image">
+              <img src="./../../../assets/imagenes/user.jpeg" class="img-circle" alt="User Image">
           </div>
       </div>
 
-      <!-- search form (Optional) -->
-      <form action="#" method="get" class="sidebar-form">
-          <div class="input-group">
-              <input type="text" name="q" class="form-control" placeholder="Search...">
-              <span class="input-group-btn">
-            <button type="submit" name="search" id="search-btn" class="btn btn-flat"><i class="fa fa-search"></i>
-            </button>
-          </span>
-          </div>
-      </form>
-      <!-- /.search form -->
-
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-          <li class="header">HEADER</li>
-          <li><a routerLink="/user" routerLinkActive="active"><i class="fa fa-link"></i> <span>Usuarios</span></a></li>
-          <!-- Optionally, you can add icons to the links -->
-          <li><a routerLink="/report"><i class="fa fa-link"></i> <span>Reportes</span></a></li>
-          <li class="treeview">
-              <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-          <span class="pull-right-container">
-              <i class="fa fa-angle-left pull-right"></i>
-            </span>
-        </a>
-              <ul class="treeview-menu">
-                  <li><a href="#">Link in level 2</a></li>
-                  <li><a href="#">Link in level 2</a></li>
-              </ul>
-          </li>
+          <li class="header" style="text-align: center;" >Bienvenido</li>
+          <li><a [routerLink]="['/visitor/face']" ><i class="fa fa-link"></i> <span>Rostro</span></a></li>
+          <li><a [routerLink]="['/visitor/eyes']"><i class="fa fa-link"></i> <span>Ojos</span></a></li>
+          <li><a [routerLink]="['/visitor/lips']"><i class="fa fa-link"></i> <span>Labios</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
   </section>
