--- a/src/app/visitor/header/header.component.html
+++ b/src/app/visitor/header/header.component.html
@@ -3,9 +3,9 @@
   <!-- Logo -->
   <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>SD</b></span>
+      <img class="logo-mini" src="./../../../assets/images/favicon_v2.png">
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>SandBeauty</b></span>
+      <img class="logo-lg" src="./../../../assets/images/logo_v2.png" >
   </a>
 
   <!-- Header Navbar -->
@@ -22,7 +22,7 @@
                   <!-- Menu Toggle Button -->
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       <!-- The user image in the navbar-->
-                      <img src="./../../../assets/imagenes/user.jpeg" class="user-image" alt="User Image">
+                      <img src="./../../../assets/images/user.jpeg" class="user-image" alt="User Image">
                       <!-- hidden-xs hides the username on small devices so only the image appears. -->
                       <span class="hidden-xs">Iniciar Sesión</span>
                   </a>
