--- a/src/app/visitor/menu/menu.component.html
+++ b/src/app/visitor/menu/menu.component.html
@@ -12,9 +12,9 @@
 
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
-          <li><a [routerLink]="['/visitor/face']" ><i class="fa fa-link"></i> <span>Rostro</span></a></li>
-          <li><a [routerLink]="['/visitor/eyes']"><i class="fa fa-link"></i> <span>Ojos</span></a></li>
-          <li><a [routerLink]="['/visitor/lips']"><i class="fa fa-link"></i> <span>Labios</span></a></li>
+          <li><a [routerLink]="['/visitor/face']" ><i class="fa fa-user"></i> <span>Rostro</span></a></li>
+          <li><a [routerLink]="['/visitor/eyes']"><i class="fa fa-eye"></i> <span>Ojos</span></a></li>
+          <li><a [routerLink]="['/visitor/lips']"><i class="fa fa-heart"></i> <span>Labios</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
   </section>
