--- a/src/app/visitor/header/header.component.html
+++ b/src/app/visitor/header/header.component.html
@@ -3,9 +3,9 @@
   <!-- Logo -->
   <a href="index2.html" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <img class="logo-mini" src="./../../../assets/images/favicon (1).png">
+      <img class="logo-mini" src="./../../../assets/images/icon.png">
       <!-- logo for regular state and mobile devices -->
-      <img class="logo-lg" src="./../../../assets/images/logo (2).png" >
+      <img class="logo-lg" src="./../../../assets/images/logo.png" >
   </a>
 
   <!-- Header Navbar -->
