--- a/src/app/visitor/visitor.component.html
+++ b/src/app/visitor/visitor.component.html
@@ -1,8 +1,9 @@
 <app-header></app-header>
 <app-menu></app-menu>
-
-<app-content></app-content>
-
+<div class="content-wrapper">
+  <section class="content container-fluid">
+    <router-outlet></router-outlet>
+  </section>
+</div>
 <app-footer></app-footer>
-<app-setting></app-setting>
-<router-outlet></router-outlet>
+
