--- a/src/app/visitor/header/header.component.html
+++ b/src/app/visitor/header/header.component.html
@@ -24,7 +24,7 @@
                       <!-- The user image in the navbar-->
                       <img src="./../../../assets/images/user.jpeg" class="user-image" alt="User Image">
                       <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                      <span class="hidden-xs">Iniciar Sesión</span>
+                      <a [routerLink]="['/visitor/login']"><span class="hidden-xs">Iniciar Sesión</span></a>
                   </a>
               </li>
           </ul>
