--- a/src/app/visitor/login/login.component.scss
+++ b/src/app/visitor/login/login.component.scss
@@ -1,30 +1,41 @@
-mat-card
-{
+mat-card {
   max-width: 600px;
-  max-height: 600px;
   margin: 2em auto;
   text-align: center;
+  max-height: 600px;
 }
 
-.header{
+.header {
   text-align: center;
 }
-
-.full-width
-{
+.full-width {
   width: 80%;
 }
 
-.forgot-password{
+.button-row {
+  padding-top: 5px;
+}
+
+.button-row a {
+  margin-right: 8px;
+  text-align: center;
+}
+
+.forget-password {
   padding-left: 0px;
 }
 
-.email-imput{
+.emailInput {
   padding-top: 10px;
 }
 
-.aLink
-{
+.contentBody {
+  padding: 60px 1rem;
+  background: #1b6ca8;
+  display: block;
+}
+
+.aLink {
   float: right;
   padding-right: 60px;
   text-decoration: none;
