--- a/src/app/visitor/menu/menu.component.html
+++ b/src/app/visitor/menu/menu.component.html
@@ -6,7 +6,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
           <div class="image">
-              <img src="./../../../assets/imagenes/user.jpeg" class="img-circle" alt="User Image">
+              <img src="./../../../assets/images/user.jpeg" class="img-circle" alt="User Image" style="align-items: center">
           </div>
       </div>
 
