--- a/src/app/visitor/login/login.component.html
+++ b/src/app/visitor/login/login.component.html
@@ -1,15 +1,15 @@
 <mat-card>
   <mat-card-content>
     <div class="header">
-      <P>Sign Into Your Account </P>
+      <P>Iniciar sesión </P>
     </div>
     <form (ngSubmit)="onLogin()" name="loginForm" [formGroup]="loginForm">
       <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Email</mat-label>
-          <input formControlName="email" matInput placeholder="Enter email address" required />
+          <mat-label>Nombre de usuario</mat-label>
+          <input formControlName="email" matInput placeholder="Ingrese un nombre de usuario" required />
           <mat-error *ngIf="!loginForm.controls['email'].valid">
-            Email is required
+            Usuario requerido
           </mat-error>
         </mat-form-field>
       </div>
@@ -19,7 +19,7 @@
           <a class="text-link" class="aLink" routerLink="/auth/forgot-password">Forgot Password?</a>
         </span>
         <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Password</mat-label>
+          <mat-label>Contraseña</mat-label>
           <input formControlName="password" matInput [type]=" hide ? 'password' : 'text'" required />
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide Password'"
             [attr.aria-pressed]="hide">
@@ -28,15 +28,15 @@
             </mat-icon>
           </button>
           <mat-error *ngIf="!loginForm.controls['password'].valid">
-            Password is required
+            contraseña requerida
           </mat-error>
         </mat-form-field>
       </div>
-      <button mat-flat-button color="primary">Login</button>
+      <button mat-flat-button color="primary">Iniciar sesión</button>
     </form>
 
     <div class="button-row">
-      <p>Create New Account</p>
+      <p>Registrarse</p>
     </div>
   </mat-card-content>
 </mat-card>
