--- a/src/app/client/header/header.component.html
+++ b/src/app/client/header/header.component.html
@@ -1,8 +1,33 @@
-<nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
-  <a routerLink="/lips" routerLinkActive="active">Labios</a>
-  <a routerLink="/eyes" routerLinkActive="active">Ojos</a>
-  <a routerLink="/face" routerLinkActive="active">Rostro</a>
-  <a routerLink="/orders" routerLinkActive="active">Mis ordenes</a>
-  <a routerLink="/logout" routerLinkActive="active">Cerrar Sesion</a>
-</nav>
+<header class="main-header">
+
+  <!-- Logo -->
+  <a href="index2.html" class="logo">
+      <!-- mini logo for sidebar mini 50x50 pixels -->
+      <img class="logo-mini" src="./../../../assets/images/icon.png">
+      <!-- logo for regular state and mobile devices -->
+      <img class="logo-lg" src="./../../../assets/images/logo.png" >
+  </a>
+
+  <!-- Header Navbar -->
+  <nav class="navbar navbar-static-top" role="navigation">
+      <!-- Sidebar toggle button-->
+      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+          <span class="sr-only">Toggle navigation</span>
+      </a>
+      <!-- Navbar Right Menu -->
+      <div class="navbar-custom-menu">
+          <ul class="nav navbar-nav">
+              <!-- User Account Menu -->
+              <li class="dropdown user user-menu">
+                  <!-- Menu Toggle Button -->
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                      <!-- The user image in the navbar-->
+                      <img src="./../../../assets/images/user 1.png" class="user-image" alt="User Image">
+                      <!-- hidden-xs hides the username on small devices so only the image appears. -->
+                      <a [routerLink]="['/client/logout']"><span class="hidden-xs">Cerrar Sesión</span></a>
+                  </a>
+              </li>
+          </ul>
+      </div>
+  </nav>
+</header>
