--- a/src/app/client/menu/menu.component.html
+++ b/src/app/client/menu/menu.component.html
@@ -6,7 +6,7 @@
         <!-- Sidebar user panel (optional) -->
         <div class="user-panel">
             <div class="image">
-                <img src="./../../../assets/images/user 1.png" class="img-circle" alt="User Image" style="align-items: center">
+                <img src="./../../../assets/images/user2.jpg" class="img-circle" style="align-items: center">
             </div>
         </div>
 
