--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -1,1 +1,33 @@
-<p>menu works!</p>
+<aside class="main-sidebar">
+
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+
+        <!-- Sidebar user panel (optional) -->
+        <div class="user-panel">
+            <div class="image">
+                <img src="./../../../assets/images/user2.jpg" class="img-circle" style="align-items: center">
+            </div>
+        </div>
+
+        <!-- Sidebar Menu -->
+        <ul class="sidebar-menu" data-widget="tree">
+            <li><a [routerLink]="['/admin/reports']"><i class="fa fa-chart-bar"></i> <span>Reportes</span></a></li>
+            <li class="treeview">
+                <a href="#"><i class="fa fa-box-open"></i> <span>Productos</span>
+            <span class="pull-right-container">
+                <i class="fa fa-angle-left pull-right"></i>
+              </span>
+          </a>
+                <ul class="treeview-menu">
+                    <li><a href="#"><i class="fa fa-user"></i>Rostro</a></li>
+                    <li><a href="#"><i class="fa fa-eye"></i>Ojos</a></li>
+                    <li><a href="#"><i class="fa fa-heart"></i>Labios</a></li>
+                </ul>
+            </li>
+        </ul>
+        <!-- /.sidebar-menu -->
+    </section>
+    <!-- /.sidebar -->
+  </aside>
+
