--- a/src/app/client/header/header.component.html
+++ b/src/app/client/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
 
   <!-- Logo -->
-  <a href="index2.html" class="logo">
+  <a [routerLink]="['/client/face']" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <img class="logo-mini" src="./../../../assets/images/icon.png">
       <!-- logo for regular state and mobile devices -->
@@ -22,7 +22,7 @@
                   <!-- Menu Toggle Button -->
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                       <!-- The user image in the navbar-->
-                      <img src="./../../../assets/images/user 1.png" class="user-image" alt="User Image">
+                      <img src="./../../../assets/images/user2.jpg" class="user-image" alt="User Image">
                       <!-- hidden-xs hides the username on small devices so only the image appears. -->
                       <a [routerLink]="['/client/logout']"><span class="hidden-xs">Cerrar Sesión</span></a>
                   </a>
