--- a/src/app/visitor/header/header.component.html
+++ b/src/app/visitor/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
 
   <!-- Logo -->
-  <a href="index2.html" class="logo">
+  <a [routerLink]="['/visitor/face']"class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <img class="logo-mini" src="./../../../assets/images/icon.png">
       <!-- logo for regular state and mobile devices -->
