--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -20,9 +20,9 @@
               </span>
           </a>
                 <ul class="treeview-menu">
-                    <li><a href="#"><i class="fa fa-user"></i>Rostro</a></li>
-                    <li><a href="#"><i class="fa fa-eye"></i>Ojos</a></li>
-                    <li><a href="#"><i class="fa fa-heart"></i>Labios</a></li>
+                    <li><a [routerLink]="['/admin/face']"><i class="fa fa-user"></i>Rostro</a></li>
+                    <li><a [routerLink]="['/admin/eyes']"><i class="fa fa-eye"></i>Ojos</a></li>
+                    <li><a [routerLink]="['/admin/lips']"><i class="fa fa-heart"></i>Labios</a></li>
                 </ul>
             </li>
         </ul>
