--- a/src/app/visitor/singup/singup.component.html
+++ b/src/app/visitor/singup/singup.component.html
@@ -1,9 +1,9 @@
 <mat-card>
   <mat-card-content>
     <div class="header">
-      <P>Iniciar sesión </P>
+      <P>Registrarse</P>
     </div>
-    <form (ngSubmit)="onLogin()" name="loginForm" [formGroup]="loginForm">
+    <form (ngSubmit)="onRegister()" name="loginForm" [formGroup]="loginForm">
       <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label>Nombre de usuario</mat-label>
@@ -32,11 +32,11 @@
           </mat-error>
         </mat-form-field>
       </div>
-        <button mat-flat-button color="primary">Iniciar sesión</button>
+        <button mat-flat-button color="primary">Registrarse</button>
     </form>
 
     <div class="button-row">
-      <a [routerLink]="['/visitor/register']"><p style="color: black;">Registrarse</p></a>
+      <a [routerLink]="['/visitor/login']"><p style="color: black;">Iniciar sesión</p></a>
     </div>
   </mat-card-content>
 </mat-card>
