Co-authored-by: Jenifer Medina <Jemeye@users.noreply.github.com>

--- a/src/app/client/menu/menu.component.html
+++ b/src/app/client/menu/menu.component.html
@@ -12,11 +12,11 @@
 
         <!-- Sidebar Menu -->
         <ul class="sidebar-menu" data-widget="tree">
-            <li><a [routerLink]="['/client/face']" ><i class="fa fa-user"></i> <span>Rostro</span></a></li>
-            <li><a [routerLink]="['/client/eyes']"><i class="fa fa-eye"></i> <span>Ojos</span></a></li>
-            <li><a [routerLink]="['/client/lips']"><i class="fa fa-heart"></i> <span>Labios</span></a></li>
-            <li><a [routerLink]="['/client/cart']"><i class="fa fa-shopping-cart"></i> <span>Carrito de compras</span></a></li>
-            <li><a [routerLink]="['/client/orders']"><i class="fa fa-clipboard-check"></i> <span>Pedidos</span></a></li>
+            <li><a [routerLink]="['face']" ><i class="fa fa-user"></i> <span>Rostro</span></a></li>
+            <li><a [routerLink]="['eyes']"><i class="fa fa-eye"></i> <span>Ojos</span></a></li>
+            <li><a [routerLink]="['lips']"><i class="fa fa-heart"></i> <span>Labios</span></a></li>
+            <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart"></i> <span>Carrito de compras</span></a></li>
+            <li><a [routerLink]="['orders']"><i class="fa fa-clipboard-check"></i> <span>Pedidos</span></a></li>
         </ul>
         <!-- /.sidebar-menu -->
     </section>
