--- a/src/app/products/face/face.component.html
+++ b/src/app/products/face/face.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let item of faceProducts">
-    <div class="box-body">
-      <h4 style="
+  <div class="box-body">
+    <h4 style="
           background-color: #f7f7f7;
           font-size: 18px;
           text-align: center;
@@ -8,29 +8,34 @@
           margin-top: 0;
           font-weight: bold;
         ">
-        {{ item.name }}
-      </h4>
-      <div class="media">
-        <div class="media-left">
-          <a href="" class="ad-click-event">
-            <img [src]="item.img" alt="ArchitectUI Vue.js Admin Template" class="media-object" style="
+      {{ item.name }}
+    </h4>
+    <div class="media">
+      <div class="media-left">
+        <a href="" class="ad-click-event">
+          <img [src]="item.img" alt="ArchitectUI Vue.js Admin Template" class="media-object" style="
                 width: 150px;
                 height: auto;
                 border-radius: 4px;
                 box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
               " />
-          </a>
+        </a>
+      </div>
+      <div class="media-body">
+        <div class="clearfix">
+          <p class="pull-right" *ngIf="client">
+            <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
+              Comprar</a>
+            <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
+              añadir al carrito
+            </a>
+          </p>
         </div>
-        <div class="media-body">
-          <div class="clearfix" *ngIf="">
-            <p class="pull-right"><a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">Comprar</a></p>
-          </div>
-          <h4 style="margin-top: 0">
-            Producto con envio ─ {{ item.price | currency }}
-          </h4>
-          <p>{{ item.description }}</p>
-        </div>
+        <h4 style="margin-top: 0">
+          Producto con envio ─ {{ item.price | currency }}
+        </h4>
+        <p>{{ item.description }}</p>
       </div>
     </div>
   </div>
-
+</div>
