--- a/src/app/client/orders/orders.component.html
+++ b/src/app/client/orders/orders.component.html
@@ -1,1 +1,29 @@
-<p>orders works!</p>
+<div *ngFor="let currentOrder of orders; index as i">
+  <section class="content" style="padding: 0px; min-height: 0;">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="box" style="margin: 0;">
+          <div class="box-header with-border">
+            <h3 class="box-title">Pedido N° {{i}}</h3>
+          </div>
+          <div class="box-body table-responsive">
+            <table class="table table-bordered">
+              <tr>
+                <th style="width: 20px">#</th>
+                <th>Producto</th>
+                <th>Fecha de entrega</th>
+                <th style="width: 80px"></th>
+              </tr>
+              <tr *ngFor="let item of currentOrder.products; index as j">
+                <td>{{j}}.</td>
+                <td>{{item}}</td>
+                <td>{{currentOrder.date}}</td>
+                <td><span class="badge bg-red">ver detalle</span></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</div>
