--- a/src/app/products/eyes/eyes.component.html
+++ b/src/app/products/eyes/eyes.component.html
@@ -1,6 +1,6 @@
-
 <div *ngFor="let item of eyesProducts">
   <div class="box-body">
+
     <h4 style="
         background-color: #f7f7f7;
         font-size: 18px;
@@ -27,17 +27,29 @@
           <p class="pull-right">
             <a href="#"
               class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
-              Comprar</a>
+              Comprar</a
+  >
             <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
+
               añadir al carrito
-            </a>
+              </a>
           </p>
+          </div>
+          <h4 style="margin-top: 0">
+            Producto con envio ─ {{ item.price | currency }}
+          </h4>
+          <p>{{ item.description }}</p>
         </div>
-        <h4 style="margin-top: 0">
-          Producto con envio ─ {{ item.price | currency }}
-        </h4>
-        <p>{{ item.description }}</p>
       </div>
-    </div>
+  </  div>
   </div>
-</div>
+
+
+
+
+
+
+
+
+
+
