--- a/src/app/visitor/login/login.component.html
+++ b/src/app/visitor/login/login.component.html
@@ -36,7 +36,7 @@
     </form>
 
     <div class="button-row">
-      <a [routerLink]="['/visitor/register']"><p style="color: #737373 ;">REGISTRARSE</p></a>
+      <a [routerLink]="['/visitor/register']"><p style="color: #737373">REGISTRARSE</p></a>
     </div>
   </mat-card-content>
 </mat-card>
