--- a/src/app/visitor/singup/singup.component.html
+++ b/src/app/visitor/singup/singup.component.html
@@ -1,12 +1,12 @@
 <mat-card>
   <mat-card-content>
     <div class="header">
-      <P>Registrarse</P>
+      <h3 style="color: #fd7f87; font: blond">REGISTRARSE</h3>
     </div>
     <form (ngSubmit)="onRegister()" name="loginForm" [formGroup]="loginForm">
       <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Nombre de usuario</mat-label>
+          <mat-label style="color: #fd7f87">Nombre de usuario</mat-label>
           <input formControlName="nickname" matInput placeholder="Ingrese un nombre de usuario" required />
           <mat-error *ngIf="!loginForm.controls['nickname'].valid">
             Usuario requerido
@@ -19,7 +19,7 @@
           <a class="text-link" class="aLink" routerLink="/auth/forgot-password">Forgot Password?</a>
         </span>
         <mat-form-field class="full-width" appearance="outline">
-          <mat-label>Contraseña</mat-label>
+          <mat-label style="color: #fd7f87">Contraseña</mat-label>
           <input formControlName="password" matInput [type]=" hide ? 'password' : 'text'" required />
           <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide Password'"
             [attr.aria-pressed]="hide">
@@ -32,11 +32,11 @@
           </mat-error>
         </mat-form-field>
       </div>
-        <button mat-flat-button color="primary">Registrarse</button>
+        <button mat-flat-button style="background-color: #fd7f87; color:#fff">Registrarse</button>
     </form>
 
     <div class="button-row">
-      <a [routerLink]="['/visitor/login']"><p style="color: black;">Iniciar sesión</p></a>
+      <a [routerLink]="['/visitor/login']"><p style="color: #737373">INICIAR SESIÓN</p></a>
     </div>
   </mat-card-content>
 </mat-card>
