Pedidos dinamic works

--- a/src/app/client/detailOrder/detailorder.component.html
+++ b/src/app/client/detailOrder/detailorder.component.html
@@ -1,131 +1,32 @@
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis magni illum beatae doloribus. Inventore blanditiis
-  ducimus veritatis perspiciatis soluta ut itaque corporis illum voluptatem explicabo ea perferendis tempore, incidunt
-  dolor aliquid error natus quod quasi distinctio officiis mollitia adipisci obcaecati quidem repudiandae? At quasi
-  ipsam animi accusamus impedit corporis dolore harum velit sunt voluptas amet consequuntur ex, consequatur soluta
-  facere eligendi odio. Vero voluptatibus non neque nemo vitae harum, animi eum, alias voluptate in, doloremque quos?
-  Minima itaque maxime quas magnam non impedit vel nam, voluptatum rerum aperiam error tempore libero dignissimos,
-  accusamus ad animi quis in ducimus! Voluptate fugiat quisquam accusamus nesciunt sed, reprehenderit labore fuga iure.
-  Laborum, pariatur labore optio quaerat praesentium debitis distinctio, quam quisquam ipsa delectus voluptas molestias,
-  dolor exercitationem. Voluptate soluta, facere nisi at hic dicta minima voluptatum quibusdam distinctio nulla maxime
-  velit cupiditate atque impedit? Quis, deleniti fugiat! Natus illo esse ad atque, minima repudiandae illum vel laborum?
-  Odit possimus maiores tempore dolor, nulla omnis odio. Amet, sit? Accusamus facere est rem, quo, odio non in at
-  tempora dolores hic eum tenetur odit aperiam error quisquam asperiores voluptatibus deserunt ullam? Iusto quisquam
-  quae deserunt minus harum fugiat, veritatis, dolorum maiores corrupti tenetur praesentium tempora? Nihil laudantium
-  dicta earum eveniet, voluptates deserunt at beatae quisquam magnam reiciendis? Harum quae, aliquam quo ex voluptas,
-  aperiam aliquid enim amet quas ut voluptatum cumque eum assumenda, libero facilis. Placeat, quisquam molestias fugit
-  consequatur sequi corporis ea sunt minima dolor quibusdam error officiis! Assumenda ipsum aliquid in vitae eaque
-  minima voluptates rerum expedita saepe accusantium, dicta quod nam veritatis reprehenderit laborum quasi iste porro at
-  nobis enim praesentium, nisi magni beatae. Incidunt quisquam nulla dolorum quas iste porro, dolorem illum. Quam, ad
-  repudiandae deleniti praesentium unde fugiat, modi odio suscipit in quaerat animi facere perferendis eum nobis, rerum
-  totam facilis quidem ipsum reprehenderit. Pariatur eum hic dicta recusandae suscipit a tenetur sunt. Rerum voluptas
-  nulla magni? Placeat sapiente ipsa ad consequuntur ipsum assumenda sit quia, cumque, ipsam nihil saepe necessitatibus
-  volptatibus tenetur quam, ut autem. Cumque nulla ipsam perspiciatis iste porro provident dolor voluptates laudantium,
-  ducimus tempora amet laborum exercitationem atque delectus rem molestias debitis, minima recusandae consequuntur,
-  alias non. Deserunt provident reprehenderit odio accusamus et omnis, voluptatem voluptate quasi rerum tempora
-  aspernatur, necessitatibus libero impedit dolorum. Voluptatibus earum error similique tempore reprehenderit voluptate
-  iusto id. Eius consectetur, mollitia est iste debitis sapiente enim nulla. Quod, vel a aliquam dolore recusandae
-  molestiae itaque dolores. Inventore neque perspiciatis dolor omnis veritatis ab harum molestias! Eligendi culpa non
-  sit facere, maxime aspernatur dolore veritatis ducimus voluptatem, minima ab similique, sunt tenetur. Consectetur ea
-  itaque veritatis iste minima labore, at sunt accusantium repellendus neque ipsam! Distinctio nulla vitae soluta
-  incidunt sint suscipit, totam sunt tenetur hic animi eveniet repellendus ullam voluptas? Ratione error aliquid,
-  officiis dolorum minima adipisci, iure cumque natus obcaecati aut esse porro dignissimos. Enim ipsam, modi at
-  consectetur ex omnis assumenda odit id recusandae laborum, distinctio veniam dolorem nulla voluptate non quo hic,
-  debitis totam asperiores alias rem fugiat officiis aut? Perspiciatis est ad pariatur quod aliquid? Tenetur libero
-  autem recusandae nam quod officia in voluptatibus, deserunt exercitationem numquam eos fugiat consequatur error saepe
-  quis vitae doloribus, cupiditate minus itaque eius vel, atque impedit unde! Minima at et reprehenderit, nobis illum
-  blanditiis assumenda magni qui laudantium provident quisquam deserunt, voluptas quod in aperiam id perspiciatis
-  deleniti officia excepturi distinctio vero? Nobis fugiat debitis nisi deserunt, aliquid omnis iste, voluptatum impedit
-  obcaecati rem ut nesciunt! Adipisci amet aperiam quod magnam sint reprehenderit. Deleniti iure id labore repellendus
-  quaerat nihil hic dicta nobis facere, quam voluptatum ullam, perspiciatis repellat voluptatem consequuntur fuga qui,
-  asperiores numquam magnam? A explicabo dolor quae earum, repellendus eos perferendis possimus est sit. Tenetur, nemo.
-  Eius dicta rerum amet necessitatibus, delectus deleniti maiores quis saepe similique porro, maxime consectetur earum
-  enim quae adipisci repudiandae, modi rem illo odit? Aut, dignissimos? Perspiciatis, corporis. Sed, omnis consequatur
-  autem harum aliquam libero recusandae natus quis a saepe molestiae enim quam amet dolorem sunt modi, eligendi
-  blanditiis voluptatem praesentium veniam molestias! Est quisquam iste illo alias? Beatae ratione eum aliquid unde
-  repudiandae. Voluptas quis sunt eaque hic! Illo eaque tempore voluptatum, quibusdam earum praesentium quia modi ullam
-  ut voluptatibus, cupiditate animi magni blanditiis saepe. Atque, laudantium ipsam in ipsum, debitis, iusto pariatur
-  quae possimus facere perspiciatis ullam totam ut autem itaque? Explicabo nihil aliquam ipsum magnam sapiente, sequi
-  accusantium repellat vero blanditiis soluta nemo quisquam ipsa aperiam! Eum libero nesciunt distinctio vero aliquid
-  nobis quae incidunt provident iusto magni, fugiat id tenetur odit velit itaque dolorem ex sequi at error ullam enim
-  exercitationem ut sed iste? Quisquam voluptatibus aut magnam alias eveniet, ducimus ab! Iure eaque voluptatibus
-  ratione. Esse velit, enim quibusdam, eos voluptatem modi laboriosam unde aspernatur, accusantium ut dolor nesciunt
-  maxime quidem libero minima molestiae dignissimos sit. Explicabo sunt obcaecati nesciunt praesentium corrupti eum
-  autem accusantium quam eos doloribus, est expedita officiis, labore velit. Ipsa deleniti laboriosam nihil, commodi
-  sint dolorum? Magni dignissimos nesciunt veritatis nisi? Autem, dolorem quaerat a rem aliquam adipisci doloribus
-  consequuntur laudantium incidunt repudiandae asperiores aspernatur ex blanditiis illum explicabo magni ullam quisquam
-  impedit ratione in! Voluptatibus sint autem amet, voluptate nihil velit provident, voluptates quisquam consectetur
-  quaerat sunt dolor id. Consectetur placeat rem, natus itaque et sunt ab totam alias enim, illum ex aliquam dolorem
-  repudiandae distinctio ullam nostrum deserunt nobis hic! Voluptate explicabo libero laudantium. Quia repudiandae,
-  quasi laboriosam culpa aliquid, accusantium dolorem doloremque inventore atque quaerat vitae iusto similique, qui
-  illum obcaecati mollitia? Officia, quis sint! Aspernatur iusto provident quisquam vel optio ipsum commodi sint quidem
-  autem laudantium voluptas quasi adipisci sunt porro itaque dolor ullam, nostrum eveniet rerum nesciunt voluptates
-  voluptatibus voluptatum. Dolores, quaerat, itaque voluptas repellat nesciunt labore repudiandae veniam, mollitia qui
-  perspiciatis laudantium ut quam. Qui accusamus repellat dolorem voluptates eos, eaque, atque consequuntur, dignissimos
-  doloremque necessitatibus esse placeat itaque quisquam amet. Incidunt consectetur quod natus ipsum asperiores,
-  corporis labore tempora iusto facilis aspernatur fugit autem soluta nulla vel reiciendis repudiandae deserunt, cum
-  illo ex aperiam maxime reprehenderit laboriosam eos dolor. Optio ea culpa, autem dolorem impedit nam quis excepturi
-  beatae consequuntur rem ut. Quasi vero temporibus nisi dicta cum delectus quae sequi eius aperiam nulla cumque,
-  molestias odio similique expedita hic explicabo. Ullam porro reiciendis laudantium similique tempore est saepe eos ex,
-  repudiandae at necessitatibus, nemo assumenda minima exercitationem voluptatem explicabo minus labore harum libero.
-  Sit placeat neque eaque possimus mollitia! Iure corporis voluptate ea dolore pariatur molestiae consectetur modi? Odio
-  quae magni labore nesciunt ab deserunt repellendus, qui temporibus nihil praesentium dolore facere soluta officia
-  adipisci? Dolor, doloribus quibusdam. Quam quasi fugiat harum magni nam illum rem voluptatem ab recusandae in incidunt
-  placeat nemo labore maxime, libero asperiores nulla non quos accusantium ullam facilis voluptates? Architecto
-  blanditiis cumque, tempora suscipit officiis, possimus voluptas vel asperiores dolore laboriosam expedita, deleniti
-  soluta! Veniam culpa velit minima, iste temporibus quibusdam autem aliquam est magnam, non sed molestias nobis,
-  consectetur numquam laudantium porro officiis accusantium excepturi doloremque provident quos natus ad nostrum.
-  Adipisci possimus, ratione reprehenderit fuga quaerat debitis quasi asperiores sapiente corporis suscipit eaque
-  nesciunt aspernatur id, expedita corrupti neque soluta deleniti ex cupiditate sunt aliquid, enim magni. Consectetur
-  odit vel praesentium quisquam harum voluptas dicta natus. Quam atque ducimus quos enim incidunt voluptatibus ea eos
-  mollitia maxime qui quia modi dicta, dolore tempore aspernatur neque quod praesentium at tempora ipsum provident illo.
-  Molestias quis reiciendis deserunt beatae! Et repudiandae est, deleniti ratione maxime quae eum, aspernatur corrupti
-  facere cupiditate dolorum. Ab iure doloribus laboriosam fugiat repellendus quo, tenetur sequi quibusdam delectus,
-  corporis tempore a, dolorem suscipit nihil molestiae ipsum cumque. Fuga voluptatum minima excepturi voluptas error?
-  Labore, delectus dolorum? Minima voluptas quidem soluta distinctio harum maxime ea adipisci reiciendis eum vitae cum,
-  illum nostrum tempora saepe, fuga qui incidunt quae, explicabo quo eius. Voluptatum voluptatem mollitia iusto fugit
-  ullam vitae alias est saepe dicta vel beatae nemo cumque quis, ex, in facere doloribus perspiciatis sint itaque
-  explicabo vero odio enim quos? A quisquam delectus obcaecati repellat quas vel sint, harum, architecto recusandae quia
-  amet officiis quaerat dolores ut molestias sequi cum nam iste temporibus, libero earum. Blanditiis, labore tempora
-  quaerat porro est veritatis rem eum facere! Alias ad rem, delectus recusandae unde ipsa? Alias mollitia tempore
-  voluptas facilis. Harum soluta quia natus fuga tempore consequatur impedit mollitia architecto quasi corporis libero
-  magni expedita incidunt, tenetur doloremque nobis beatae nemo nesciunt. Iusto id sapiente accusantium dolor qui
-  dignissimos totam ut quod vitae vel, delectus nisi eaque dolorem. Omnis, magni! Suscipit quia architecto ullam
-  voluptate mollitia aperiam harum beatae assumenda ducimus, facere accusamus qui explicabo id optio doloribus maxime,
-  ipsam voluptatum temporibus libero facilis similique! Fugiat, est rerum vitae necessitatibus incidunt voluptates
-  ratione sed iste dolor facilis atque, nemo neque architecto sunt libero aspernatur consequatur vel itaque nihil quidem
-  nam inventore ducimus aliquid! Ipsa nobis quae ex ipsam ullam error accusamus dignissimos vero repellat reiciendis?
-  Sed iusto, repellendus optio laudantium voluptas magni harum natus necessitatibus similique magnam non molestiae,
-  perferendis at ipsum maxime maiores officiis cum vel expedita. Minus dolorum, ipsam architecto culpa, molestias
-  impedit asperiores recusandae, beatae error neque omnis deserunt dignissimos quod repellat vitae quidem minima natus
-  quis sequi reiciendis provident cum! Libero, facilis totam iusto illo maxime cum quas repellendus. Ipsam, nesciunt
-  esse, nostrum modi excepturi molestias aliquam quaerat tempore a voluptatem minus. Aut nobis nulla sed ex, ut,
-  asperiores nesciunt, ducimus voluptatibus quasi tenetur nisi consequuntur non cum molestias perspiciatis recusandae ab
-  velit. Sequi fugiat magnam mollitia quia maiores ab laboriosam voluptas, quos blanditiis cumque officia, ad, explicabo
-  sapiente necessitatibus cupiditate amet similique ratione placeat quas unde ipsa deleniti et! Facere molestias porro
-  non ratione laborum? Molestiae nisi assumenda vel iusto modi dolore voluptate saepe non nihil sapiente? At cum
-  delectus, aut officia vel beatae, molestiae ipsa a, temporibus sit animi quis dolores. Optio inventore aliquam dolores
-  voluptas suscipit veniam impedit neque odit expedita dicta est, a quia odio similique! Corporis tempora delectus,
-  nulla dolores porro ipsa in consequuntur amet cumque adipisci veniam animi corrupti, iure id aperiam explicabo aliquid
-  natus! Atque sapiente laborum sit porro fuga non quidem quisquam ducimus dignissimos officiis sint qui modi provident
-  dicta culpa beatae labore, dolorum, ea nesciunt accusantium earum. Quas aperiam cumque minus! Impedit sapiente quasi
-  ea illo, magni perspiciatis porro architecto corrupti molestiae quod veritatis aliquid soluta consequuntur voluptatem
-  magnam? Veniam quisquam nesciunt quam? Ex error praesentium animi, eius reprehenderit iusto iste alias odit
-  repellendus ducimus dolore voluptatum, quasi modi vero enim veritatis hic! Ut impedit ea nulla incidunt, placeat
-  obcaecati accusamus! Mollitia eveniet debitis, ullam praesentium laboriosam placeat. Asperiores optio consequatur
-  neque dicta quae quis eveniet vel nam ipsam, omnis autem minus laudantium quidem facere cum in itaque beatae voluptate
-  deleniti et quia, molestiae maiores, iusto veniam. Possimus quos optio ad ipsa nostrum iusto velit officia repellat
-  minima, similique doloremque, perferendis rem, blanditiis beatae sit sunt tenetur nobis recusandae consequuntur enim.
-  Sequi non nam laudantium vitae recusandae, expedita est corrupti, ducimus iure, maiores doloribus quam? Reprehenderit
-  vitae fugiat, maxime nobis rerum quidem quam laboriosam eum velit necessitatibus mollitia corrupti ab tempore quaerat
-  quisquam debitis officiis cumque praesentium omnis, minima dolor totam? Id est corrupti nihil rem quam temporibus
-  iusto quisquam at, ad doloribus amet quasi provident enim tenetur soluta consectetur in? Necessitatibus excepturi,
-  cumque hic libero atque culpa corrupti, a ipsum impedit aut deleniti reprehenderit dolores repudiandae doloremque
-  voluptate dolore vitae rem voluptatem quam blanditiis, distinctio perferendis quidem eius sed! Sapiente ab qui dolorum
-  aut est, praesentium sit? Sunt tenetur voluptas porro, adipisci voluptatem ipsam. Assumenda, aut perspiciatis. Esse
-  maiores quidem, temporibus cupiditate sequi repudiandae eaque. Ad in, eveniet ducimus obcaecati dignissimos non velit
-  minima, rem soluta quis dolores, aut labore consequuntur quam quas? Aut ipsum est quisquam odit explicabo, veniam illo
-  maxime quos fugiat necessitatibus asperiores distinctio repudiandae blanditiis earum dicta accusantium voluptatem
-  numquam debitis quod. Vero atque nostrum ipsa vitae deserunt voluptate, ratione molestias velit, repellendus, ex
-  reiciendis voluptatum numquam. Fuga saepe voluptatem maxime quo perferendis error facere? Sed voluptatum autem
-  molestiae ut sapiente impedit sint, delectus adipisci tenetur tempora iste facere natus necessitatibus obcaecati
-  neque.</p>
+<div *ngFor="let item of productsOrder; index as i">
+  <div class="box-body">
+    <h4 style="
+        background-color: #f7f7f7;
+        font-size: 18px;
+        text-align: center;
+        padding: 7px 10px;
+        margin-top: 0;
+        font-weight: bold;
+      ">
+      {{ item.name }}
+    </h4>
+    <div class="media">
+      <div class="media-left">
+        <a href="" class="ad-click-event">
+          <img [src]="item.img" alt="ArchitectUI Vue.js Admin Template" class="media-object" style="
+              width: 150px;
+              height: auto;
+              border-radius: 4px;
+              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
+            " />
+        </a>
+      </div>
+      <div class="media-body">
+        <h4 style="margin-top: 0">
+          Producto con envio ─ {{ item.price | currency }}
+        </h4>
+        <p>{{ item.description }}</p>
+      </div>
+    </div>
+  </div>
+</div>
