--- a/src/app/client/menu/menu.component.html
+++ b/src/app/client/menu/menu.component.html
@@ -17,6 +17,11 @@
             <li><a [routerLink]="['lips']"><i class="fa fa-heart"></i> <span>Labios</span></a></li>
             <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart"></i> <span>Carrito de compras</span></a></li>
             <li><a [routerLink]="['orders']"><i class="fa fa-clipboard-check"></i> <span>Pedidos</span></a></li>
+            <li> <a [routerLink]="['detailOrder', 0]">
+              <button type="button" class="btn btn-block btn-danger">
+                Ver
+              </button>
+            </a></li>
         </ul>
         <!-- /.sidebar-menu -->
     </section>
