--- a/src/app/admin/add/add.component.html
+++ b/src/app/admin/add/add.component.html
@@ -1,4 +1,4 @@
-<div class="box">
+<!-- <div class="box">
     <div class="box-header with-border">
         <h3>Crear Producto</h3>
         <div [hidden]="submitted">
@@ -30,3 +30,4 @@
         </div>
     </div>
 </div>
+ -->
