--- a/src/app/products/eyes/eyes.component.html
+++ b/src/app/products/eyes/eyes.component.html
@@ -15,41 +15,28 @@
       <div class="media-left">
         <a href="" class="ad-click-event">
           <img [src]="item.img" alt="ArchitectUI Vue.js Admin Template" class="media-object" style="
-              width: 150px;
-              height: auto;
-              border-radius: 4px;
-              box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);
-            " />
+            width: 150px;
+            height: auto;
+            border-radius: 4px;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15);" />
         </a>
       </div>
       <div class="media-body">
         <div class="clearfix" *ngIf="client">
           <p class="pull-right">
-            <a href="#"
-              class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
-              Comprar</a
-  >
-            <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
-
+            <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart" (click)="generateOrder(item)">
+              Comprar
+            </a>
+            <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
               añadir al carrito
-              </a>
+            </a>
           </p>
-          </div>
-          <h4 style="margin-top: 0">
-            Producto con envio ─ {{ item.price | currency }}
-          </h4>
-          <p>{{ item.description }}</p>
         </div>
+        <h4 style="margin-top: 0">
+          Producto con envio ─ {{ item.price | currency }}
+        </h4>
+        <p>{{ item.description }}</p>
       </div>
-  </  div>
+    </div>
   </div>
-
-
-
-
-
-
-
-
-
-
+</div>
