--- a/src/app/client/orders/orders.component.html
+++ b/src/app/client/orders/orders.component.html
@@ -17,7 +17,7 @@
                 <td>{{currentOrder.date}}</td>
                 <td>{{currentOrder.total | currency}}</td>
                 <td>
-                  <a [routerLink]="['detailOrder', i]">
+                  <a (click) ="detailOrderNavigate(i)">
                     <button type="button" class="btn btn-block btn-danger">
                       Ver
                     </button>
