--- a/src/app/products/eyes/eyes.component.html
+++ b/src/app/products/eyes/eyes.component.html
@@ -27,7 +27,7 @@
             <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart" (click)="generateOrder(item)">
               Comprar
             </a>
-            <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
+            <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart" (click)="addCart(item)">
               añadir al carrito
             </a>
           </p>
