--- a/src/app/admin/footer/footer.component.html
+++ b/src/app/admin/footer/footer.component.html
@@ -4,5 +4,5 @@
         Proyecto Desarrollo Web
     </div>
     <!-- Default to the left -->
-    <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
+    <strong>Copyright &copy; 2016 <a>Company</a>.</strong> All rights reserved.
   </footer>cls
