--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -11,7 +11,7 @@
   <!-- Header Navbar -->
   <nav class="navbar navbar-static-top" role="navigation">
       <!-- Sidebar toggle button-->
-      <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+      <a  class="sidebar-toggle" data-toggle="push-menu" role="button">
           <span class="sr-only">Toggle navigation</span>
       </a>
       <!-- Navbar Right Menu -->
@@ -20,11 +20,11 @@
               <!-- User Account Menu -->
               <li class="dropdown user user-menu">
                   <!-- Menu Toggle Button -->
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                  <a  class="dropdown-toggle" data-toggle="dropdown">
                       <!-- The user image in the navbar-->
                       <img src="./../../../assets/images/user2.jpg" class="user-image" alt="User Image">
                       <!-- hidden-xs hides the username on small devices so only the image appears. -->
-                      <a [routerLink]="['/admin/logout']"><span class="hidden-xs">Cerrar Sesión</span></a>
+                      <a [routerLink]="['/visitor']" (click)="logOut()"><span class="hidden-xs">Cerrar Sesión</span></a>
                   </a>
               </li>
           </ul>
