--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -12,9 +12,17 @@
 
         <!-- Sidebar Menu -->
         <ul class="sidebar-menu" data-widget="tree">
-            <li><a [routerLink]="['/admin/reports']"><i class="fa fa-chart-bar"></i> <span>Reportes</span></a></li>
+            <li>
+              <a (click)= navigateReports();>
+                <i class="fa fa-chart-bar">
+                </i>
+                <span>
+                  Reportes
+                </span>
+              </a>
+            </li>
             <li class="treeview">
-                <a href="#"><i class="fa fa-box-open"></i> <span>Productos</span>
+                <a ><i class="fa fa-box-open"></i> <span>Productos</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
