--- a/src/app/products/lips/lips.component.html
+++ b/src/app/products/lips/lips.component.html
@@ -22,12 +22,12 @@
         </a>
       </div>
       <div class="media-body">
-        <div class="clearfix" >
+        <div class="clearfix">
           <p class="pull-right" *ngIf="client">
             <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
               Comprar
             </a>
-            <a href="#" class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart">
+            <a class="btn btn-success btn-sm ad-click-event fas fa-shopping-cart" (click)="addCart(item)">
               añadir al carrito
             </a>
           </p>
