--- a/src/app/admin/face/face.component.html
+++ b/src/app/admin/face/face.component.html
@@ -86,8 +86,8 @@
 
                                 <td>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-success btn-flat"><i class="fas fa-edit"></i></button>
-                                        <button type="button" class="btn btn-danger btn-flat" ><i class="fas fa-trash-alt" ></i></button>
+                                        <button type="button" class="btn btn-success btn-flat" (click)="updateProductFace(item)" style="background-color: #757575"><i class="fas fa-edit"></i></button>
+                                        <button type="button" class="btn btn-danger btn-flat" (click)="deleteProductFace(item)" style="background-color: #fd7f87"><i class="fas fa-trash-alt" ></i></button>
                                     </div>
                                 </td>
                             </div>
