--- a/src/app/admin/eyes/eyes.component.html
+++ b/src/app/admin/eyes/eyes.component.html
@@ -87,7 +87,7 @@
                                 <td>
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-success btn-flat"><i class="fas fa-edit"></i></button>
-                                        <button type="button" class="btn btn-danger btn-flat" ><i class="fas fa-trash-alt" ></i></button>
+                                        <button type="button" class="btn btn-danger btn-flat"  (click)="deleteProductEye(item)" style="background-color: #fd7f87"><i class="fas fa-trash-alt" ></i></button>
                                     </div>
                                 </td>
                             </div>
