--- a/src/app/admin/lips/lips.component.html
+++ b/src/app/admin/lips/lips.component.html
@@ -86,7 +86,7 @@
 
                                 <td>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-success btn-flat"><i class="fas fa-edit"></i></button>
+                                        <button type="button" class="btn btn-success btn-flat" (click)="update(item)"><i class="fas fa-edit"></i></button>
                                         <button type="button" class="btn btn-danger btn-flat" (click)="deleteProductLip(item)" style="background-color: #fd7f87"><i class="fas fa-trash-alt" ></i></button>
                                     </div>
                                 </td>
