--- a/src/app/admin/update/update.component.html
+++ b/src/app/admin/update/update.component.html
@@ -1,1 +1,7 @@
-<p>update works!</p>
+<mat-card>
+  <mat-card-content>
+    <div class="header">
+      <h3 style="color: #fd7f87; font: blond">Editar</h3>
+    </div>
+  </mat-card-content>
+</mat-card>
