--- a/src/app/admin/add/add.component.html
+++ b/src/app/admin/add/add.component.html
@@ -1,33 +1,41 @@
-<!-- <div class="box">
-    <div class="box-header with-border">
-        <h3>Crear Producto</h3>
-        <div [hidden]="submitted">
-            <form (ngSubmit)="onSubmit()">
-                <br>
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fas fa-id-card-alt"></i></span>
-                    <input type="text" class="form-control" id="identificacion" required [(ngModel)]="user.identificacion" name="identificacion" placeholder="Identificación">
-                </div>
-                <br>
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fas fa-file-signature"></i></span>
-                    <input type="text" class="form-control" id="nombre" required [(ngModel)]="user.nombre" name="nombre" placeholder="Nombre">
-                </div>
-                <br>
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fas fa-envelope"></i></span>
-                    <input type="text" class="form-control" id="email" required [(ngModel)]="user.email" name="email" placeholder="Descripción">
-                </div>
-                <br>
-                <div class="input-group">
-                    <span class="input-group-addon"><i class="fas fa-users"></i></span>
-                    <input type="text" class="form-control" id="rol" required [(ngModel)]="user.rol" name="rol" placeholder="rol">
-                </div>
-                <br>
-                <button type="submit" class="btn btn-success"> <i class="fas fa-save"></i> Guardar</button>
-                <a routerLink="/user" class="btn btn-primary">Atras</a>
-            </form>
+<mat-card>
+    <mat-card-content>
+      <div class="header">
+        <h3 style="color: #fd7f87; font: blond">Editar Producto</h3>
+      </div>
+      <form (ngSubmit)="add()" name="loginForm" [formGroup]="loginForm">
+        <div class="emailInput">
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label style="color: #fd7f87">Identificación</mat-label>
+              <input formControlName="id" matInput placeholder="Ingrese la nueva descripción" required />
+            </mat-form-field>
+          </div>
+        <div>
+          <mat-form-field class="full-width" appearance="outline">
+            <mat-label style="color: #fd7f87">Nombre</mat-label>
+            <input formControlName="name" matInput [type]=" hide ? 'name' : 'text'" placeholder="Ingrese el nuevo nombre"required />
+          </mat-form-field>
         </div>
-    </div>
-</div>
- -->
+        <div class="emailInput">
+          <mat-form-field class="full-width" appearance="outline">
+            <mat-label style="color: #fd7f87">Descripción</mat-label>
+            <input formControlName="description" matInput placeholder="Ingrese la nueva descripción" required />
+          </mat-form-field>
+        </div>
+        <div class="emailInput">
+          <mat-form-field class="full-width" appearance="outline">
+            <mat-label style="color: #fd7f87">Precio</mat-label>
+            <input formControlName="price" matInput placeholder="Ingrese el nuevo precio" required />
+          </mat-form-field>
+        </div>
+        <div class="emailInput">
+            <mat-form-field class="full-width" appearance="outline">
+              <mat-label style="color: #fd7f87">Categoria</mat-label>
+              <input formControlName="prtegoriaice" matInput placeholder="Ingrese la categoria: EYE|FACE|LPS " required />
+            </mat-form-field>
+          </div>
+        <button mat-flat-button style="background-color: #fd7f87; color:#fff">Guardar</button>
+        <button mat-flat-button style="background-color: #a01c25; color:#fff">Descartar</button>
+      </form>
+    </mat-card-content>
+  </mat-card>
