--- a/src/app/admin/eyes/eyes.component.html
+++ b/src/app/admin/eyes/eyes.component.html
@@ -12,7 +12,7 @@
 
                 <div class="d-flex justify-content-around">
                     <!--aqui va el formulario-->
-                    <a routerLink="" class="btn btn-success" style="background-color: #fd7f87">AGREGAR</a>
+                    <a [routerLink]="['/add']" class="btn btn-success" style="background-color: #fd7f87">AGREGAR</a>
                 </div>
             </div>
         </div>
