--- a/src/app/admin/eyes/eyes.component.html
+++ b/src/app/admin/eyes/eyes.component.html
@@ -83,10 +83,9 @@
                         </td>
                         <td>
                             <div class="btn-group">
-
                                 <td>
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-success btn-flat"><i class="fas fa-edit"></i></button>
+                                        <button type="button" class="btn btn-success btn-flat" (click)="update(item)"><i class="fas fa-edit"></i></button>
                                         <button type="button" class="btn btn-danger btn-flat"  (click)="deleteProductEye(item)" style="background-color: #fd7f87"><i class="fas fa-trash-alt" ></i></button>
                                     </div>
                                 </td>
