--- a/src/app/admin/update/update.component.html
+++ b/src/app/admin/update/update.component.html
@@ -1,25 +1,20 @@
 <mat-card>
   <mat-card-content>
     <div class="header">
-      <h3 style="color: #fd7f87; font: blond">Crear Producto</h3>
+      <h3 style="color: #fd7f87; font: blond">Editar Producto</h3>
     </div>
     <form (ngSubmit)="update()" name="loginForm" [formGroup]="loginForm">
-            <div>
+      <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label style="color: #fd7f87">Nombre</mat-label>
-          <input formControlName="name" matInput [type]=" hide ? 'name' : 'text'" placeholder="Ingrese el nuevo nombre"required />
-        </mat-form-field>
-      </div>
-      <div>
-        <mat-form-field class="full-width" appearance="outline">
-          <mat-label style="color: #fd7f87">Nombre</mat-label>
-          <input formControlName="name" matInput [type]=" hide ? 'name' : 'text'" placeholder="Ingrese el nuevo nombre"required />
+          <input formControlName="name" matInput [type]=" hide ? 'name' : 'text'" placeholder="Ingrese el nuevo nombre"
+            required />
         </mat-form-field>
       </div>
       <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label style="color: #fd7f87">Descripción</mat-label>
-          <input formControlName="description" matInput placeholder="Ingrese la nueva descripción" required />
+          <input formControlName="desc" matInput placeholder="Ingrese la nueva descripción" required />
         </mat-form-field>
       </div>
       <div class="emailInput">
@@ -29,7 +24,7 @@
         </mat-form-field>
       </div>
       <button mat-flat-button style="background-color: #fd7f87; color:#fff">Guardar</button>
-      <button mat-flat-button style="background-color: #a01c25; color:#fff">Descartar</button>
     </form>
+    <button mat-flat-button style="background-color: #a01c25; color:#fff">Descartar</button>
   </mat-card-content>
 </mat-card>
