--- a/src/app/visitor/login/login.component.html
+++ b/src/app/visitor/login/login.component.html
@@ -16,7 +16,7 @@
 
       <div>
         <span>
-          <a class="text-link" class="aLink" routerLink="/auth/forgot-password">Forgot Password?</a>
+          <a class="text-link" class="aLink" >Forgot Password?</a>
         </span>
         <mat-form-field class="full-width" appearance="outline">
           <mat-label style="color: #fd7f87">Contraseña</mat-label>
