--- a/src/app/admin/update/update.component.html
+++ b/src/app/admin/update/update.component.html
@@ -20,7 +20,7 @@
       <div class="emailInput">
         <mat-form-field class="full-width" appearance="outline">
           <mat-label style="color: #fd7f87">Precio</mat-label>
-          <input formControlName="price" matInput placeholder="Ingrese el nuevo precio" required />
+          <input type="number" formControlName="price" matInput placeholder="Ingrese el nuevo precio" required />
         </mat-form-field>
       </div>
       <button mat-flat-button style="background-color: #fd7f87; color:#fff">Guardar</button>
